Updated DataBase model, added default sort in reports

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -35,6 +35,8 @@
             data-filter-control="true"
             data-show-search-clear-button="true"
             data-row-style="row_style"
+            data-sort-name="added_time"
+            data-sort-order="desc"
             >
         <thead>
 
