First step to publish project.
First step to publish project.

--- a/templates/modules/sidebar.html
+++ b/templates/modules/sidebar.html
@@ -32,6 +32,9 @@
 <!--                    </a>-->
 <!--                </li>-->
             </ul>
+            <h6 class="d-flex justify-content-between align-items-center px-3 mt-4 mb-1" style="font-size: 0.75rem;">
+                <span><a href="https://github.com/NSTikhomirov/XSSEye">Open-Source XSSEye</a> by <a href="http://nstikhomirov.me/">&copy;NSTikhomirov</a>.</span>
+            </h6>
         </div>
     </nav>
 
