--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,9 +1,8 @@
 {% extends 'template.html' %}
 {% block head %}
-<link
-        rel="stylesheet"
-        href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"
-        crossorigin="anonymous">
+<link rel="stylesheet"
+      href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"
+      crossorigin="anonymous">
 {% endblock %}
 
 {% block content %}
@@ -15,6 +14,9 @@
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
+}
+.report-template {
+    display: none;
 }
 </style>
 {% for host in hosts %}
@@ -32,6 +34,7 @@
             data-advanced-search="true"
             data-show-refresh="true"
             data-auto-refresh="true"
+            data-auto-refresh-status="false"
             data-filter-control="true"
             data-show-search-clear-button="true"
             data-row-style="row_style"
@@ -60,7 +63,88 @@
     </table>
 </div>
 {% endfor %}
+<div class="report-template">
+    <form>
+        <h3>Request Info</h3>
 
+        <div class="form-group">
+            <label><b>Payload address</b></label>
+            <input class="form-control payload-address" readonly value="">
+        </div>
+
+        <div class="form-group">
+            <label><b>Request Address</b></label>
+            <input class="form-control payload-request-address" readonly value="">
+        </div>
+
+        <div class="form-group">
+            <label><b>Request RAW</b></label>
+            <textarea class="form-control payload-request-raw" rows="10" readonly></textarea>
+        </div>
+
+        <hr>
+        <h3>Payload Response Info</h3>
+
+        <div class="form-group">
+            <label><b>Path</b></label>
+            <input class="form-control report-path" readonly
+                   value="">
+        </div>
+
+        <div class="form-group">
+            <label><b>Referer</b></label>
+            <input class="form-control report-referer" readonly
+                   value="">
+        </div>
+
+        <div class="form-group">
+            <label><b>User-Agent</b></label>
+            <input class="form-control report-user-agent" readonly
+                   value="">
+        </div>
+
+        <div class="form-group">
+            <label><b>Cookies</b></label>
+            <input class="form-control report-cookies" readonly
+                   value="">
+
+        </div>
+
+        <div class="form-group">
+            <label><b>Local Storage</b></label>
+            <textarea class="form-control report-localstorage" rows="5" readonly></textarea>
+        </div>
+
+        <div class="form-group">
+            <label><b>Additional Data</b></label>
+            <textarea class="form-control report-additional-data" rows="5" readonly></textarea>
+        </div>
+
+        <div class="form-group">
+            <img
+                    src=""
+                    class="img-fluid rounded report-screenshot">
+        </div>
+
+        <div class="form-group">
+            <button type="button" class="btn btn-danger form-control btn-lg btn-block btn-imitate">Imitate this user</button>
+        </div>
+    </form>
+</div>
+<div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" id="confirm-modal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="myModalLabel">Are you sure?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" id="modal-btn-yes">Yes</button>
+                <button type="button" class="btn btn-primary" id="modal-btn-no">No</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block end_body %}
@@ -83,14 +167,62 @@
 <script
         src="https://unpkg.com/bootstrap-table@1.16.0/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"
         crossorigin="anonymous"></script>
+
 <script>
+function modalConfirm(callback) {
+    $("#confirm-modal").modal('show');
+
+    $("#modal-btn-yes").off("click").on("click", function() {
+        callback(true);
+        $("#confirm-modal").modal('hide');
+    });
+
+    $("#modal-btn-no").off("click").on("click", function() {
+        callback(false);
+        $("#confirm-modal").modal('hide');
+    });
+};
     window.operate_events = {
         'click [table-action="mark"]': function (e, value, row) {
-            debugger;
-            alert('You click mark action, uuid: ' + JSON.stringify(value))
+            $.ajax({
+                url: "{{url_for('admin_api.mark_report')}}",
+                type: "MARK",
+                dataType: 'json',
+                contentType: 'application/json',
+                data: JSON.stringify({ 'uniq_id': value, 'mark': !row['is_marked'] }),
+                xhrFields: {
+                     withCredentials: true
+                },
+                success: function() {
+                    row['is_marked'] = !row['is_marked'];
+
+                    var elem = $(e.toElement).parents("tr");
+                    if (row['is_marked'])
+                        elem.addClass('table-primary');
+                    else
+                        elem.removeClass('table-primary')
+                }
+            });
         },
         'click [table-action="remove"]': function (e, value, row) {
-            alert('You click remove action, uuid: ' + JSON.stringify(value))
+            modalConfirm(function(confirm) {
+                if (!confirm) return;
+                $.ajax({
+                    url: "{{url_for('admin_api.delete_report')}}",
+                    type: "DELETE",
+                    dataType: 'json',
+                    contentType: 'application/json',
+                    data: JSON.stringify({ 'uniq_id': value }),
+                    xhrFields: {
+                         withCredentials: true
+                    },
+                    success: function() {
+                        row['is_marked'] = !row['is_marked'];
+
+                        $(e.toElement).parents("tr").remove();
+                    }
+                });
+            });
         }
     }
 
@@ -102,20 +234,67 @@
             '<a table-action="remove" href="javascript:void(0)" title="Remove">',
             '<span data-feather="trash-2"></span>',
             '</a>'
-        ].join('')
+        ].join('');
     }
 
     function date_formatter(value, row, index) {
-        var date = new Date(value)
-        return date.toLocaleDateString() + " " + date.toTimeString().split(' ')[0]
+        var date = new Date(value);
+        return date.toLocaleDateString() + " " + date.toTimeString().split(' ')[0];
     }
 
     function detail_formatter(index, row) {
-        var html = []
-        $.each(row, function (key, value) {
-            html.push('<p><b>' + key + ':</b> ' + value + '</p>')
-        })
-        return html.join('')
+        var result = $(".report-template").clone();
+        result.removeAttr('id');
+        var replace_vals = {
+            '.payload-id': row['payload']['id'],
+            '.payload-address': '{{url_for('generator.show', uid='', _external=True)}}' + row['payload']['public_id'],
+            '.payload-request-address': (
+                (
+                    row['payload']['protocol'] != null &&
+                    row['payload']['protocol'] != null &&
+                    row['payload']['protocol'] != null
+                )?
+                (
+                    row['payload']['protocol'] + ':' +
+                    row['payload']['hostname'] + ':' +
+                    row['payload']['port']
+                ) : null
+
+            ),
+            '.payload-request-raw': row['payload']['request'],
+            '.report-path': row['humanize']['url'],
+            '.report-user-agent': row['user_agent'],
+            '.report-cookies': row['cookies'],
+            '.report-localstorage': (
+                typeof row['localstorage'] == 'object' ?
+                    JSON.stringify(row['localstorage'], undefined, 4) :
+                    row['localstorage']
+            ),
+            '.report-additional-data': row['additional_data']
+        };
+
+        $.each(replace_vals, function (key, value) {
+            var el = result.find(key);
+            if (el.length == 0) return;
+
+            if (value == null)
+                el.addClass('is-invalid');
+
+            if (typeof value != 'string')
+                value = JSON.stringify(value, undefined, 4);
+
+            if (el.get(0).tagName === "TEXTAREA")
+                el.text(value);
+            else
+                el.attr('value', value);
+        });
+        result.find('.report-screenshot')
+            .attr('src', '{{url_for('admin.view_screenshot', uuid='')}}' + row['uniq_id'])
+            .attr('onerror',
+                "this.style.width = '100px';" +
+                "this.src='{{url_for('admin.screenshot_unavailable')}}';"
+            );
+        return result.html();
     }
 
     function row_style(row, index) {
@@ -124,10 +303,7 @@
         // active - table-acitve
         // wtf - table-danger
         return {
-            //css: {
-            //    color: 'blue'
-            //}
-            classes: ''
+            classes: (row['is_marked'] ? 'table-primary' : '')
         }
     }
 
@@ -144,5 +320,10 @@
             detailClose: 'minus'
         }
     })
+
+
+
 </script>
+
+
 {% endblock %}
